# SxT_crypto_coding_project

./: Cargo.toml  README.md
src/: generic.rs  main.rs
