[package]
name = "SxT_crypto_coding_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-curve25519 = "0.4.0"
ark-linear-sumcheck = {git="https://github.com/yangfh2004/sumcheck.git"}
ark-poly = "0.4.0"
ark-std = "0.4.0"
ark-ff = "0.4.0"
anyhow = "1.0.69"